infra/istio/overlays/identity/virtualservice-identity.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: identity
  namespace: sis
spec:
  hosts:
  - identity
  http:
  - route:
    - destination:
        host: identity
        port:
          number: 3001
