infra/istio/overlays/identity/authorizationpolicy-identity-allow-gateway.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: identity-allow-gateway
  namespace: sis
spec:
  selector:
    matchLabels:
      app: identity
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sis/sa/gateway-sa"]
    to:
    - operation:
        ports: ["3001"]
